[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.5"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["cookies", "json", "rustls-tls"] }
rustyline = "10.0"
criterion = "0.4"
csv = "1.1"
